--- a/features/red-subscribe-button.user.css
+++ b/features/red-subscribe-button.user.css
@@ -27,7 +27,8 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
     /* Subscribed button */
     #subscribe,
-    #subscribe-button {
+    #subscribe-button,
+    ytd-subscribe-button-renderer {
         yt-button-shape {
 
             /* Red Subscribed button */
