--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,19 +6,20 @@
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.5.9
+@version        1.6.0
 @license        MIT
 @preprocessor   stylus
 
 @advanced range customAvatarRadius          "⚙️ Avatar Roundness" [50, 0, 50, 1, '%']
 @advanced range customBorderRadius          "⚙️ Border Radius" [0, 0, 24, 1, 'px']
+@advanced checkbox verifiedBadge            "✅ Blue Verified Badge" 0
 @advanced checkbox centeredSearchResults    "🔎 Centered The Search Results" 0
-
 @advanced checkbox displayFullTitle         "🎦 Display Full Title For Videos" 0
 @advanced checkbox moreAnimation            "🎬 More Animations" 1
 @advanced checkbox restoreOldPlaylist       "▶️ Restore Old Playlist" 0
 @advanced checkbox removeShorts             "❌ Remove Shorts (Beta)" 0
 @advanced checkbox removeTaps               "❌ Remove Taps" 0
+@advanced checkbox watchedOverlay           "👀 Watched Overlay" 1 
 
 @advanced select customHomepage             "⚒️ Custom Homepage" ["Enabled", "Disabled"]
 @advanced range videoPerRow                 "  🏠 Number Of Videos Per Row" [5, 1, 10, 1]
@@ -66,6 +67,56 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --sub-red-btn: #CC0000;
         --sub-white--text-btn: #F2F2F2;
         --sub-black-bg-btn: #303030;
+    }
+
+    if (verifiedBadge) {
+        path[d="M12\,2C6.5\,2\,2\,6.5\,2\,12c0\,5.5\,4.5\,10\,10\,10s10-4.5\,10-10C22\,6.5\,17.5\,2\,12\,2z M9.8\,17.3l-4.2-4.1L7\,11.8l2.8\,2.7L17\,7.4 l1.4\,1.4L9.8\,17.3z"] {
+            color: rgb(29, 155, 240);
+            d: path("M22.25 12c0-1.43-.88-2.67-2.19-3.34.46-1.39.2-2.9-.81-3.91s-2.52-1.27-3.91-.81c-.66-1.31-1.91-2.19-3.34-2.19s-2.67.88-3.33 2.19c-1.4-.46-2.91-.2-3.92.81s-1.26 2.52-.8 3.91c-1.31.67-2.2 1.91-2.2 3.34s.89 2.67 2.2 3.34c-.46 1.39-.21 2.9.8 3.91s2.52 1.26 3.91.81c.67 1.31 1.91 2.19 3.34 2.19s2.68-.88 3.34-2.19c1.39.45 2.9.2 3.91-.81s1.27-2.52.81-3.91c1.31-.67 2.19-1.91 2.19-3.34zm-11.71 4.2L6.8 12.46l1.41-1.42 2.26 2.26 4.8-5.23 1.47 1.36-6.2 6.77z");
+        }
+    }
+
+    if (watchedOverlay) {
+        #overlays > ytd-thumbnail-overlay-resume-playback-renderer {
+            position: absolute;
+            top: 0;
+            height: 100%;
+            background: rgba(90, 90, 90, 0.7) !important;
+
+            &::before {
+                content: " ";
+
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                height: 100%;
+            }
+            > div#progress {
+                &::before {
+                    color: var(--yt-spec-static-brand-white);
+                    content: "watched";
+                    text-transform: uppercase;
+
+                    font-family: "Roboto", sans-serif;
+                    font-size: 1.2rem i;
+                    font-weight: inherit;
+
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+
+                    background-color: var(--yt-spec-static-overlay-background-heavy);
+                    letter-spacing: var(--yt-badge-letter-spacing, 0.5px);
+                    margin: 4px;
+                    padding: 3px 4px;
+                    border-radius: 4px;
+                }
+            }
+        } // #progress.ytd-thumbnail-overlay-resume-playback-renderer {
+        //     position: relative;
+        //     top: -4px;
+        // }
     }
 
     /* ⚒️ Custom Homepage */
@@ -359,10 +410,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /*  🫣 Hide Thanks button */
         if (thanksBtn) {
-            yt-button-shape button[aria-label="Thanks"] {
-                display: none;
-            }
-
+            // yt-button-shape button[aria-label="Thanks"] {
+            //     display: none;
+            // }
             /* Not supported on Firefox and Brave */
             /* Once more, I'd like to thank Mikey(Vednoc) for his assistance in getting the issue resolved. He is very awesome guys */
             #flexible-item-buttons > ytd-button-renderer > yt-button-shape :has(path[d="M16.5\,3C19.02\,3\,21\,5.19\,21\,7.99c0\,3.7-3.28\,6.94-8.25\,11.86L12\,20.59l-0.74-0.73l-0.04-0.04C6.27\,14.92\,3\,11.69\,3\,7.99 C3\,5.19\,4.98\,3\,7.5\,3c1.4\,0\,2.79\,0.71\,3.71\,1.89L12\,5.9l0.79-1.01C13.71\,3.71\,15.1\,3\,16.5\,3 M16.5\,2c-1.74\,0-3.41\,0.88-4.5\,2.28 C10.91\,2.88\,9.24\,2\,7.5\,2C4.42\,2\,2\,4.64\,2\,7.99c0\,4.12\,3.4\,7.48\,8.55\,12.58L12\,22l1.45-1.44C18.6\,15.47\,22\,12.11\,22\,7.99 C22\,4.64\,19.58\,2\,16.5\,2L16.5\,2z M11.33\,10.86c0.2\,0.14\,0.53\,0.26\,1\,0.36c0.47\,0.1\,0.86\,0.22\,1.18\,0.35 c0.99\,0.4\,1.49\,1.09\,1.49\,2.07c0\,0.7-0.28\,1.27-0.83\,1.71c-0.33\,0.26-0.73\,0.43-1.17\,0.54V17h-2v-1.16 c-0.18-0.05-0.37-0.1-0.53-0.19c-0.46-0.23-0.92-0.55-1.18-0.95C9.15\,14.48\,9.06\,14.24\,9\,14h2c0.05\,0.09\,0.07\,0.18\,0.15\,0.25 c0.23\,0.19\,0.54\,0.29\,0.92\,0.29c0.36\,0\,0.63-0.07\,0.82-0.22s0.28-0.35\,0.28-0.59c0-0.25-0.11-0.45-0.34-0.6s-0.59-0.27-1.1-0.39 c-1.67-0.39-2.51-1.16-2.51-2.34c0-0.68\,0.26-1.26\,0.78-1.71c0.28-0.25\,0.62-0.43\,1-0.54V7h2v1.12c0.46\,0.11\,0.85\,0.29\,1.18\,0.57 C14.59\,9.05\,14.9\,9.48\,15\,10h-2c-0.04-0.09-0.1-0.17-0.16-0.24c-0.17-0.19-0.44-0.29-0.81-0.29c-0.32\,0-0.56\,0.08-0.74\,0.24 c-0.17\,0.16-0.26\,0.36-0.26\,0.6C11.03\,10.53\,11.13\,10.72\,11.33\,10.86z"]) {
@@ -372,10 +422,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /*  🫣 Hide Clip button */
         if (clipBtn) {
-            yt-button-shape button[aria-label="Clip"] {
-                display: none;
-            }
-
+            // yt-button-shape button[aria-label="Clip"] {
+            //     display: none;
+            // }
             /* Not supported on Firefox and Brave */
             /* Once more, I'd like to thank Mikey(Vednoc) for his assistance in getting the issue resolved. He is very awesome guys */
             #flexible-item-buttons > ytd-button-renderer > yt-button-shape :has(path[d="M8\,7c0\,0.55-0.45\,1-1\,1S6\,7.55\,6\,7c0-0.55\,0.45-1\,1-1S8\,6.45\,8\,7z M7\,16c-0.55\,0-1\,0.45-1\,1c0\,0.55\,0.45\,1\,1\,1s1-0.45\,1-1 C8\,16.45\,7.55\,16\,7\,16z M10.79\,8.23L21\,18.44V20h-3.27l-5.76-5.76l-1.27\,1.27C10.89\,15.97\,11\,16.47\,11\,17c0\,2.21-1.79\,4-4\,4 c-2.21\,0-4-1.79-4-4c0-2.21\,1.79-4\,4-4c0.42\,0\,0.81\,0.08\,1.19\,0.2l1.37-1.37l-1.11-1.11C8\,10.89\,7.51\,11\,7\,11c-2.21\,0-4-1.79-4-4 c0-2.21\,1.79-4\,4-4c2.21\,0\,4\,1.79\,4\,4C11\,7.43\,10.91\,7.84\,10.79\,8.23z M10.08\,8.94L9.65\,8.5l0.19-0.58C9.95\,7.58\,10\,7.28\,10\,7 c0-1.65-1.35-3-3-3S4\,5.35\,4\,7c0\,1.65\,1.35\,3\,3\,3c0.36\,0\,0.73-0.07\,1.09-0.21L8.7\,9.55l0.46\,0.46l1.11\,1.11l0.71\,0.71l-0.71\,0.71 L8.9\,13.91l-0.43\,0.43l-0.58-0.18C7.55\,14.05\,7.27\,14\,7\,14c-1.65\,0-3\,1.35-3\,3c0\,1.65\,1.35\,3\,3\,3s3-1.35\,3-3 c0-0.38-0.07-0.75-0.22-1.12l-0.25-0.61L10\,14.8l1.27-1.27l0.71-0.71l0.71\,0.71L18.15\,19H20v-0.15L10.08\,8.94z M17.73\,4H21v1.56 l-5.52\,5.52l-2.41-2.41L17.73\,4z M18.15\,5l-3.67\,3.67l1\,1L20\,5.15V5H18.15z"]) {
@@ -385,7 +434,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /*  🫣 Hide Share button */
         if (shareBtn) {
-            yt-button-shape button[aria-label="Share"],
+            // yt-button-shape button[aria-label="Share"],
             #top-level-buttons-computed > ytd-button-renderer > yt-button-shape > button {
                 display: none;
             }
@@ -394,10 +443,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
         /*  🫣 Hide Save button */
         if (saveBtn) {
 
-            yt-button-shape button[aria-label="Save to playlist"] {
-                display: none;
-            }
-
+            // yt-button-shape button[aria-label="Save to playlist"] {
+            //     display: none;
+            // }
             #flexible-item-buttons > ytd-button-renderer > yt-button-shape :has(path[d="M22\,13h-4v4h-2v-4h-4v-2h4V7h2v4h4V13z M14\,7H2v1h12V7z M2\,12h8v-1H2V12z M2\,16h8v-1H2V16z"]) {
                 display: none;
             }
