--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -6,10 +6,11 @@
 @homepageURL    https://github.com/sapondanaisriwan/AdashimaaTube
 @supportURL     https://github.com/sapondanaisriwan/AdashimaaTube/issues
 @updateURL      https://userstyles.world/api/style/6944.user.css
-@version        1.6.0
+@version        1.6.2
 @license        MIT
 @preprocessor   stylus
 
+@advanced checkbox removeShorts             "❌ Anti-Shorts (Beta)" 0
 @advanced range customAvatarRadius          "⚙️ Avatar Roundness" [50, 0, 50, 1, '%']
 @advanced range customBorderRadius          "⚙️ Border Radius" [0, 0, 24, 1, 'px']
 @advanced checkbox verifiedBadge            "✅ Blue Verified Badge" 0
@@ -17,7 +18,6 @@
 @advanced checkbox displayFullTitle         "🎦 Display Full Title For Videos" 0
 @advanced checkbox moreAnimation            "🎬 More Animations" 1
 @advanced checkbox restoreOldPlaylist       "▶️ Restore Old Playlist" 0
-@advanced checkbox removeShorts             "❌ Remove Shorts (Beta)" 0
 @advanced checkbox removeTaps               "❌ Remove Taps" 0
 @advanced checkbox watchedOverlay           "👀 Watched Overlay" 0
 
@@ -41,13 +41,15 @@
 @advanced checkbox searchBox                "  🌑 Dark Search Box" 0
 @advanced checkbox scroll_Bar               "  🌑 Dark Scroll Bar" 1
 
+@advanced select customLikeDislike          "⚒️ Custom Like/Dislike Button Color" ["Enabled", "Disabled"]
+@advanced checkbox customThumbs             "  🗿 Colorize Thumbs" 0
+@advanced color likeBtnColor                "  👍 Like Button Color" #32CD32 //default color #3ea6ff
+@advanced color dislikeBtnColor             "  👎 Dislike Button Color" #FF0000
+
 @advanced select customRatioBar             "⚒️ Display Ratio Bar (Beta)" ["Enabled", "Disabled"]
 @advanced color likeRBColor                 "  🎨 Like Ratio Color" #32CD32
 @advanced color dislikeRBColor              "  🎨 Dislike Ratio Color" #FF0000
 
-@advanced select customLikeDislike          "⚒️ Custom Like/Dislike Button Color" ["Enabled", "Disabled"]
-@advanced color likeBtnColor                "  👍 Like Button Color" #3ea6ff
-@advanced color dislikeBtnColor             "  👎 Dislike Button Color" #3ea6ff
 
 ==/UserStyle== */
 i=!important //
@@ -379,13 +381,29 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
         /* Video container */
         /* 👍 Like Button Color */
-        #segmented-like-button button[aria-pressed="true"] yt-icon path {
-            fill: likeBtnColor i;
-            stroke: none;
+        #segmented-like-button button {
+            &[aria-pressed="false"] yt-icon path {
+                if (customThumbs) {
+                    stroke: likeBtnColor i;
+                }
+            }
+
+            &[aria-pressed="true"] yt-icon path {
+                fill: likeBtnColor i;
+                stroke: likeBtnColor i;
+            }
         }
         /* 👎 Dislike Button Color */
-        #segmented-dislike-button button[aria-pressed="true"] yt-icon {
-            fill: dislikeBtnColor i;
+        #segmented-dislike-button button {
+            &[aria-pressed="false"] yt-icon path {
+                if (customThumbs) {
+                    fill: dislikeBtnColor i;
+                }
+            }
+
+            &[aria-pressed="true"] yt-icon path {
+                fill: dislikeBtnColor i;
+            }
         }
 
         /* Comments section */
