--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -447,11 +447,9 @@ Support me: https://ko-fi.com/sapondanaisriwan
             [page-subtype="channels"] {
                 #contents {
                     &.ytd-rich-grid-renderer {
-                        flex-wrap: wrap-reverse;
-                    }
-                    &.ytd-rich-grid-row {
+                        flex-wrap: wrap-reverse; // เรียงจาก ล่างขึ้นบน จากเดิม บนลงล่าง
+                        flex-direction: row-reverse; // เรียงจาก ขวาไปซ้าย จากเดิม ซ้ายไปขวา
                         justify-content: flex-end;
-                        flex-direction: row-reverse;// เรียงจาก ขวาไปซ้าย จากเดิม ซ้ายไปขวา
                     }
                 }
             }
