--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -38,6 +38,7 @@
 @advanced checkbox saveBtn                  "  🫣 Hide Save Button" 0
 @advanced checkbox commentSection           "  🫣 Hide Comments Section" 0
 @advanced checkbox textBtn                  "  🫣 Hide Text Buttons" 0
+@advanced checkbox likeAnimation            "  ❌ Remove Like Animation" 1
 @advanced checkbox gameSection              "  ❌ Remove Game Section" 1
 @advanced checkbox musicSection             "  ❌ Remove Music Section" 0
 
@@ -71,6 +72,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         --sub-white--text-btn: #F2F2F2;
         --sub-black-bg-btn: #303030;
     }
+
 
     /* ❌ Remove Shorts (Beta) */
     /* I can't find the way to remove all shorts using css alone */
@@ -108,8 +110,19 @@ Support me: https://ko-fi.com/sapondanaisriwan
 
 
         /* https://www.youtube.com/hashtag/shorts */
-        [page-subtype="hashtag-landing-page"] > #primary > ytd-rich-grid-renderer #contents > ytd-rich-grid-row > #contents > ytd-rich-item-renderer:has(#content > ytd-rich-grid-media > #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
-            display: none;
+        [page-subtype="hashtag-landing-page"] {
+            > #primary > ytd-rich-grid-renderer #contents > ytd-rich-grid-row > #contents > ytd-rich-item-renderer:has(#content > ytd-rich-grid-media > #dismissible > ytd-thumbnail > a#thumbnail[href^="/shorts/"]) {
+                display: none;
+            }
+            ytd-rich-grid-renderer {
+                /* Set to be treated as if they were the children of their parent element */
+                #contents {
+                    ytd-rich-grid-row,
+                    ytd-rich-grid-row #contents {
+                        display: contents;
+                    }
+                }
+            }
         }
 
         ytd-shorts {
@@ -530,6 +543,10 @@ Support me: https://ko-fi.com/sapondanaisriwan
             }
         }
 
+        if (likeAnimation) {
+            // ??
+        }
+        
         /* ❌ Remove Music Section */
         if (musicSection) {
             #items > ytd-video-description-music-section-renderer {
