--- a/features/centered-the-search-results.user.css
+++ b/features/centered-the-search-results.user.css
@@ -17,6 +17,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
 @-moz-document domain("youtube.com") {
   ytd-two-column-search-results-renderer {
     align-items: center;
-    margin: 0 auto !important;
+    /* margin: 0 auto !important; */
   }
 }
